--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body class="contenedor">
 	<header>
 		<div class="headerP">
-		<div class="logo"><img class="logoP" src="logop.jpg"><h1 class="title">OVI PARA DISE&Ntilde;O DE SITIOS WEB</h1></div> 
+		<div class="logo"><img class="logoP" src="logoP.jpg"><h1 class="title">OVI PARA DISE&Ntilde;O DE SITIOS WEB</h1></div> 
 		<div class="title"></div>	
 		</div>
 		
