--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                    <ul>
    	                   <li><a href="capitulo1.pdf">Introduccion</a></li>
 					   <li><a href="capitulo2.pdf">Seguridad basica</a></li>
-				       <li><a href="capitulo3.pdf">Seguridad basica2</a></li>
+				       <li><a href="Capitulo3.pdf">Seguridad basica2</a></li>
 				   </ul>
 
 				</li>
