cambios de meta data
metadata

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
 	<meta  charset=utf-8/><!--Se usa para caracteres especiales como la ñ y acentos  -->
-	<title>A Web Page</title>
+	<meta name="description" content="Es una pagina web con fines educativos para la materia de seguridad Informatica">
+  	<meta name="keywords" content="HTML,CSS,XML,JavaScript, Seguridad, UNAD">
+  	<meta name="author" content="Edson Contreras">
+	<title>Seguridad Informatica</title>
+	
 	<link rel="stylesheet" type="text/css" href="miscss.css"><!-- busca la carpeta de stilos en css -->
 </head>
 <body class="contenedor">
